# dsperse

./: .gitignore  MANIFEST.in  README.md  Runner.md  decomposer.py  install.sh  main.py  new_analyzer.py  new_slicer.py  pipeline_demo.py  pyproject.toml  requirements.txt  setup.py  test_deepspeed_runner.py  test_ezkl.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  temp.yml  test.yml
Bugbash/: Bugbash.md  runner_analyzer_diff.patch  runner_diff.patch
Bugbash/scenario1/: metadata.json  proof_output.json  prove_output.json  run_output.json  verify_output.json
cli/: __init__.py  base.py  prove.py  run.py  slice.py  verify.py
docs/: arc42.md  overview.md  publishing.md
dsperse/: deps_checker.py  install.py
dsperse/src/: constants.py  prover.py
kubz/: main.py  model_circuitizer.py  model_slicer.py  model_tester.py  model_visualizer.py  onnx_slicer.py
kubz/runners/: deepprove_runner.py  ezkl_runner.py  jstprove_runner.py  model_runner.py  onnx_runner.py  runner_utils.py
kubz/utils/: onnx_analyzer.py  onnx_utils.py
models/doom/: model.onnx
src/: __init__.py  circuitizer.py  compiler.py  composite_workflow_proofs.py  create_nanogpt.py  frontend.py  model_circuitizer.py  model_runner.py  model_slicer.py  model_tester.py  model_visualizer.py  onnx_slicer.py  prover.py  runner.py  singular_workflow_proofs.py  slicer.py  test.py  verifier.py  visualize_results.py
src/analyzers/: onnx_analyzer.py  runner_analyzer.py
src/backends/: ezkl.py  jstprove.py  onnx_models.py
test/: test_model_slicer.py  test_proofs.py  utils.py
(+137 files in other folders)
